--- a/KSH/Week2/Python/14425.ipynb
+++ b/KSH/Week2/Python/14425.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.acmicpc.net/problem/14425"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -31,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -50,7 +57,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "['qw', 'we', 'er', 'rt', 'ty', ['qw', 'as', 'zx', 'we', 'sd', 'xc', 'ty', 'gh', 'bn', 'vb', 'nm'], ['qw', 'as', 'zx', 'we', 'sd', 'xc', 'ty', 'gh', 'bn', 'vb', 'nm'], 'qw', 'as', 'zx', 'we', 'sd', 'xc', 'ty', 'gh', 'bn', 'vb', 'nm']\n"
+     "text": "['', '', '', '', '']\n"
     }
    ],
    "source": [
@@ -70,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "['qw', 'as', 'zx', 'we', 'sd', 'xc', 'ty', 'gh', 'bn', 'vb', 'nm']"
+      "text/plain": "['', '', '', '', '', '', '', '', '', '', '']"
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 6
     }
    ],
    "source": [
@@ -88,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -96,7 +103,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "['qw', 'we', 'er', 'rt', 'ty', 'qw', 'as', 'zx', 'we', 'sd', 'xc', 'ty', 'gh', 'bn', 'vb', 'nm']\n"
+     "text": "['', '', '', '', '', '', '', '', '', '', '', '', '', '', '', '']\n"
     }
    ],
    "source": [
@@ -106,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
@@ -114,7 +121,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "3\n"
+     "text": "15\n"
     }
    ],
    "source": [
