--- a/KSH/Week7/14613.ipynb
+++ b/KSH/Week7/14613.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597215161791",
+   "name": "python_defaultSpec_1597251357174",
    "display_name": "Python 3.7.6 64-bit ('base': conda)"
   }
  },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,19 +74,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(1000,3001):\n",
     " \n",
-    "        if (1000 <= i && i <= 1499) b += dp[20][i];\n",
-    "        else if (1500 <= i && i <= 1999) s += dp[20][i];\n",
-    "        else if (2000 <= i && i <= 2499) g += dp[20][i];\n",
-    "        else if (2500 <= i && i <= 2999) p += dp[20][i];\n",
-    "        else d += dp[20][i];\n",
+    "        if (1000 <= i and i <= 1499): \n",
+    "                b += a[20][i];\n",
+    "        elif (1500 <= i and i <= 1999): \n",
+    "                s += a[20][i];\n",
+    "        elif (2000 <= i and i <= 2499): \n",
+    "                g += a[20][i];\n",
+    "        elif (2500 <= i and i <= 2999): \n",
+    "                p += a[20][i];\n",
+    "        else:\n",
+    "                d += a[20][i];\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0.00590897\n0.40599251\n0.56740379\n0.02069378\n0.00000095\n"
+    }
+   ],
+   "source": [
+    "b='{0:.8f}'.format(b)\n",
+    "print(b)\n",
+    "s='{0:.8f}'.format(s)\n",
+    "print(s)\n",
+    "g='{0:.8f}'.format(g)\n",
+    "print(g)\n",
+    "p='{0:.8f}'.format(p)\n",
+    "print(p)\n",
+    "d='{0:.8f}'.format(d)\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
