--- a/KSH/Week7/2548.ipynb
+++ b/KSH/Week7/2548.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.7.7-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1597215161793",
-   "display_name": "Python 3.7.6 64-bit ('base': conda)"
+   "name": "python_defaultSpec_1597250012471",
+   "display_name": "Python 3.7.7 64-bit ('py37_ten20': conda)"
   }
  },
  "nbformat": 4,
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -38,16 +38,18 @@
     "cnt=int(input())\n",
     "num_list = list(map(int, input().split()))\n",
     "\n",
-    "ans=100000000000000000\n",
-    "wt=200000\n",
-    "for i in num_list:\n",
-    "    diff=0\n",
-    "    for j in num_list:\n",
-    "        diff+=abs(j-i)\n",
-    "    if diff<=ans:\n",
-    "        wt=min(wt,i)\n",
-    "    ans=min(ans,diff)\n",
-    "print(wt)"
+    "# ans=100000000000000000\n",
+    "# wt=200000\n",
+    "# for i in num_list:\n",
+    "#     diff=0\n",
+    "#     for j in num_list:\n",
+    "#         diff+=abs(j-i)\n",
+    "#     if diff<=ans:\n",
+    "#         wt=min(wt,i)\n",
+    "#         ans=diff\n",
+    "# print(wt)\n",
+    "num_list.sort()\n",
+    "print(num_list[cnt//2-1])"
    ]
   },
   {
