--- a/KSH/Week6/Python/1564.ipynb
+++ b/KSH/Week6/Python/1564.ipynb
@@ -14,7 +14,7 @@
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python_defaultSpec_1596552566368",
+   "name": "python_defaultSpec_1596623528970",
    "display_name": "Python 3.7.7 64-bit ('PS_Study': conda)"
   }
  },
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -31,7 +31,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "05728\n"
+     "text": "64512\n"
     }
    ],
    "source": [
@@ -39,11 +39,11 @@
     "ans=1\n",
     "for i in range(1,a+1):\n",
     "    ans*=i\n",
-    "    if ans%10==0:\n",
-    "        ans/=10\n",
-    "    ans%=100000000\n",
+    "    while ans%10==0:        \n",
+    "        ans//=10\n",
+    "    ans%=1000000000000000000\n",
     "ans%=100000\n",
-    "ans=str(int(ans)).zfill(5)\n",
+    "ans=str(ans).zfill(5)\n",
     "print(ans)"
    ]
   },
